@@ -22,7 +22,7 @@ echo "<h2>Please confirm user deletion:</h2>";
 
 echo "User <b>$name</b><br><br>";
 
-
+echo "<p>Existing scripts submitted by this user will be assigned to the user <b>admin</b>.</p>";
 echo "<p>Are you sure that you want to delete this user? If not, please press the <b>Back</b> button on your browser</p>";
 
 echo "<ul>";
